--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>Huddle Landing</title>
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
   </head>
   <body>
     <!-- Nav -->
@@ -39,6 +47,19 @@
 
       <!-- Register Button -->
       <a href="#" class="register-btn">Register</a>
+
+      <!-- Socials -->
+      <div class="socials">
+        <div class="icon">
+          <i class="fa-brands fa-facebook-f"></i>
+        </div>
+        <div class="icon twitter-icon ">
+          <i class="fa-brands fa-twitter"></i>
+        </div>
+        <div class="icon">
+          <i class="fa-brands fa-instagram"></i
+        </div>
+      </div>
     </div>
   </body>
 </html>
