added css for desktop and added hover states to icons and register button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         alt="illustration mockup"
         class="illustration"
       />
-
+      <div class="main-content-info">
       <!-- Main Text -->
       <div class="main-text">
         <h2 class="main-text-title">
@@ -60,6 +60,7 @@
           <i class="fa-brands fa-instagram"></i
         </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
