--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Huddle Landing</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
